# fast-soy-admin

./: .dockerignore  .gitignore  README.en.md  README.md  clear.py  cron_reset.py  docker-compose.yml  pyproject.toml  requirements.txt  run.py
app/: __init__.py
app/api/: __init__.py
app/api/v1/: __init__.py  utils.py
app/api/v1/auth/: __init__.py  auth.py
app/api/v1/route/: __init__.py  route.py
app/api/v1/system_manage/: __init__.py  apis.py  logs.py  menus.py  roles.py  users.py
app/controllers/: api.py  log.py  menu.py  role.py  user.py
app/core/: bgtask.py  crud.py  ctx.py  dependency.py  exceptions.py  init_app.py  middlewares.py
app/log/: log.py
app/models/system/: __init__.py  admin.py  utils.py
app/schemas/: apis.py  base.py  login.py  logs.py  menus.py  roles.py  users.py
app/settings/: __init__.py  config.py
app/utils/: security.py  tools.py
deploy/: web.conf
tests/: create_role.py  create_user.py  cron_reset.py
web/: .env  .env.prod  .env.test  package.json  pnpm-lock.yaml  vite.config.ts
web/src/constants/: business.ts
web/src/hooks/common/: table.ts
web/src/locales/langs/: en-us.ts  zh-cn.ts
web/src/router/elegant/: imports.ts  routes.ts  transform.ts
web/src/service/api/: route.ts  system-manage.ts
web/src/service/request/: index.ts
web/src/typings/: api.d.ts  app.d.ts  components.d.ts  elegant-router.d.ts  naive-ui.d.ts
web/src/views/manage/api/: index.vue
web/src/views/manage/api/modules/: api-operate-drawer.vue  api-search.vue
web/src/views/manage/log/: index.vue
web/src/views/manage/log/modules/: log-operate-drawer.vue  log-search.vue
web/src/views/manage/menu/: index.vue
web/src/views/manage/menu/modules/: menu-operate-modal.vue
web/src/views/manage/role/: index.vue
web/src/views/manage/role/modules/: api-auth-modal.vue  (+3 more)
web/src/views/manage/user/: index.vue
(+1 files in other folders)
